# fastapi-project-idea-generator

./: .env.example  README.md  main.py  pyproject.toml
app/: config.py  helpers.py  schemas.py
app/routes/: form.py  result.py
templates/: error.html  form.html  result.html
