[project]
name = "fastapi-project-idea-generator"
version = "0.1.0"
description = "FastAPI app serving AI project idea generator"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9"
]